# broker-shipping

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 071a66174520_merge_alembic_heads.py  4f2ace86ec12_add_product_category_id_fk.py  5189ba849f86_merge_product_category_fk_and_org_roles.py  619063a8c99b_add_category_table.py  a1b2c3d4e5f6_add_organization_id_to_product.py  ae80ffdd2f54_add_orders_tables_and_user_phone.py  b7e4d1c9028f_add_user_user_organization_api_key_tables.py  c8d9e0f1a2b3_add_is_super_admin_to_user.py  d4e5f6a7b8c9_add_deleted_at_to_organization.py  e1f2a3b4c5d6_cascade_user_organization_on_delete.py  f2a3b4c5d6e7_cascade_category_api_key_on_delete.py  f7b0fc1bc902_add_updated_at_to_product_and_.py  f8a3c2b1012a_add_product_and_organization_tables.py  g3h4i5j6k7l8_org_roles_and_invitations.py  h5i6j7k8l9m0_org_type_and_provider_seller_link.py  i7j8k9l0m1n2_order_seller_organization_fk.py  j8k9l0m1n2o3_add_order_line_status_and_quantity.py  k9l0m1n2o3p4_add_price_to_product.py  l0m1n2o3p4q5_add_order_line_prices.py
services/api/app/: config.py  deps.py  main.py  models.py  routes.py  s3_util.py
services/api/app/db/: __init__.py  model_loader.py  session.py
services/api/app/events/: __init__.py  names.py
services/api/app/lib/: __init__.py  app_module.py  (+15 more)
services/api/scripts/: export_openapi.py  seed_base_data.py
services/api/tests/: conftest.py  test_openapi_schema.py
(+199 files in other folders)
