[project]
name = "broker-api"
version = "0.1.0"
description = "Broker B2B API (FastAPI scaffold)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.3.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
