[project]
name = "broker-api"
version = "0.1.0"
description = "Broker B2B API (FastAPI scaffold)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "authx>=1.6.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "bcrypt>=4.0.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
